--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,4 @@ JWT_SECRET=«openssl rand -base64 10»
 JWT_EXPIRES_IN=604800
 AWS_ACCESS_KEY_ID=<Your access key here>
 AWS_SECRET_ACCESS_KEY=<Your secret access key here>
+SCHEMA=<schema_nam>
